# oob-server

./: .dockerignore  .env.bak  .env.example  .gitattributes  .gitignore  HANDOFF.md  README.md  deploy_targets.sh  docker-compose.target.yml  docker-compose.yml  report.md
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: compile_router.py  config.py  db.py  events_router.py  jrmp_router.py  main.py  models.py  schemas.py  security.py  system_router.py
backend/app/auth/: deps.py  router.py
backend/app/c2/: router.py
backend/app/collector/: bus.py  ws.py
backend/app/listeners/: dns_server.py  http_collector.py  ldap_server.py  manager.py  rmi_server.py  tcp_collector.py
backend/app/memshells/: router.py
backend/app/payloads/: catalog.py  jndi_builder.py  router.py
backend/app/projects/: router.py
backend/app/rebind/: router.py
backend/app/tokens/: router.py  service.py
backend/data/: oobx.db
backend/oobserver_next.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
bytecode-service/: Dockerfile  build.gradle.kts  entrypoint.sh  pom.xml  settings.gradle.kts
deser-targets/: BlazeDSApp.java  DeserApp.java  Dockerfile.blazeds  Dockerfile.cb2  Dockerfile.cc3  Dockerfile.java7  Dockerfile.java8old  Dockerfile.java8old.patch  Dockerfile.jdk17  Dockerfile.spring3  pom-blazeds.xml  pom-cb2.xml  pom-cc3.xml  pom-jdk17.xml  pom-spring3.xml  settings.xml
docs/: chain_test_checklist.md  chain_verification_report.md  user-manual.md
frontend/: index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
shiro-app/: Dockerfile  pom.xml
(+53 files in other folders)
