[project]
name = "oobserver-next"
version = "0.1.0"
description = "OOB exploitation platform: multi-protocol callback + JNDI/memshell payload factory + rebinding C2"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "sqlalchemy>=2.0",
  "aiosqlite>=0.19",
  "asyncpg>=0.29",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "python-jose[cryptography]>=3.3",
  "bcrypt>=4.0",
  "python-multipart>=0.0.9",
  "httpx>=0.27",
  "pyyaml>=6.0",
  "dnslib>=0.9.24",
  "websockets>=12.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.3"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
